<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#1F1F1F"
    android:padding="20dp">

    <!-- Logo -->
    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="123dp"
        android:layout_height="122dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/logo"
        android:src="@drawable/LOGO" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#CCCCCC"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="50dp" />

    <!-- Título -->
    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:gravity="center"
        android:layout_marginBottom="48dp" />

    <!-- Email o teléfono -->
    <EditText
        android:id="@+id/emailOrPhoneEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints="emailOrPhoneEditText"
        android:hint="@string/email_phone"
        android:textColorHint="@color/white"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:drawablePadding="10dp"
        android:textSize="16sp"
        tools:ignore="TextFields"
        android:layout_marginBottom="48dp"
        android:backgroundTint="@color/white"/>

    <!-- Contraseña -->

    <!-- Botón Login -->
    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="48dp"
        android:autofillHints="passwordEditText"
        android:backgroundTint="@color/white"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColorHint="@color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#EEEEEE"
        android:padding="12dp"
        android:text="@string/Login"
        android:textColor="@color/black" />



</LinearLayout>