<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#1F1F1F"
    android:padding="20dp">

    <!-- Barra de búsqueda -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:background="#333333">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_back"
            android:contentDescription="@string/back"
            android:tint="#FFFFFF"
            android:layout_marginEnd="8dp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@android:color/transparent"
            android:hint="@string/search_secret"
            android:inputType="text"
            android:textColor="#FFFFFF"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="8dp" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_close"
            android:contentDescription="@string/clear_search"
            android:tint="#FFFFFF"
            android:layout_marginStart="8dp" />
    </LinearLayout>

    <!-- Lista de resultados -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_menu"
        android:layout_below="@id/search_bar"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/last_search"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_arrow"
                    android:contentDescription="@string/view_search"
                    android:tint="#FFFFFF" />
            </LinearLayout>

            <!-- Línea divisora -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#444444" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/last_search"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_arrow"
                    android:contentDescription="@string/view_search"
                    android:tint="#FFFFFF" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#444444" />

        </LinearLayout>
    </ScrollView>



</LinearLayout>