<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include layout="@layout/navbar" />

    <EditText
        android:id="@+id/messageText"
        android:layout_width="374dp"
        android:layout_height="164dp"
        android:background="@drawable/borde"
        android:gravity="center_vertical"
        android:padding="12dp"
        android:hint="@string/secreto_nuevo"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.301"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/addFilesButton"
        android:layout_width="130dp"
        android:layout_height="52dp"
        android:layout_gravity="end"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/anadir_archivos"
        android:textColor="@color/black"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.508"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/sendButton"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:backgroundTint="@color/white"
        android:text="@string/send"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.923"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.509"
        tools:ignore="MissingConstraints" />

    <include layout="@layout/footer" />

</androidx.constraintlayout.widget.ConstraintLayout>