<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include layout="@layout/navbar" />

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Login"
        android:textSize="30sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.271" />

    <EditText
        android:id="@+id/emailOrPhoneEditText"
        android:layout_width="228dp"
        android:layout_height="47dp"
        android:layout_marginTop="76dp"
        android:autofillHints="emailOrPhoneEditText"
        android:backgroundTint="@color/white"
        android:drawablePadding="10dp"
        android:hint="@string/email_phone"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginTitle" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="228dp"
        android:layout_height="47dp"
        android:layout_marginTop="32dp"
        android:autofillHints="passwordEditText"
        android:backgroundTint="@color/white"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailOrPhoneEditText" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="228dp"
        android:layout_height="56dp"
        android:backgroundTint="#EEEEEE"
        android:padding="12dp"
        android:text="@string/Login"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText"
        app:layout_constraintVertical_bias="0.239" />

</androidx.constraintlayout.widget.ConstraintLayout>
